--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=>, initial-scale=1.0">
   <title>Victor Torres</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://i.imgur.com/cD6zKQj.png">
 </head>
 <body>
   <div id="app"></div>
